crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_019_Namco163_Mappy_Kids_Japan_En_1_0.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-019-Namco163/Mappy Kids (Japan) (En) (1.0).nes
rom_sha256=341cc6ab7d744611d9ed26b16dd3348992b735abc0e8198362daed133bb1f84c
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=b409e8b6b32b2ca3
checkpoint f900 fb_fnv1a64=c5e784a2de1d0cb8
checkpoint f1100 fb_fnv1a64=c5e784a2de1d0cb8
